--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Formulas</h2>
       <p class="mono">Given x̄₁, …, x̄ₙ, the average of the sample means is x̄_avg = (1/n) Σ x̄ᵢ.</p>
       <p class="mono">Bias = x̄_avg − μ</p>
-      <p class="mono">Variance (across runs) = either (1/n) Σ (x̄ᵢ − x̄_avg)²  <i>or</i>  (1/(n−1)) Σ (x̄ᵢ − x̄_avg)²</p>
+      <p class="mono">Variance = (1/n) Σ (x̄ᵢ − x̄_avg)²  <i>or</i>  (1/(n−1)) Σ (x̄ᵢ − x̄_avg)²</p>
       <p class="mono"><b>MSE = Bias² + Variance</b></p>
       <p class="note">Use the toggle below in the practice to switch between dividing by <b>n</b> (population) and <b>n−1</b> (sample).</p>
     </section>
